--- a/netflix.html
+++ b/netflix.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix Lookalike</title>
+    <title>Netflix Lookalike folk changed </title>
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <style>
           body{
